<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/outline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/outline_person_24"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/outline_bookmark_border_24"
            android:title="@string/menu_my_orders"/>
        <item
            android:id="@+id/nav_my_favorites"
            android:icon="@drawable/outline_favorite_border_24"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/log_out"/>
    </group>
</menu>