<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_products"
            android:icon="@drawable/outline_sell_24"
            android:title="@string/menu_my_products" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/outline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_my_orders_vendedor"
            android:icon="@drawable/outline_bookmark_border_24"
            android:title="@string/menu_my_orders"/>
        <item
            android:id="@+id/nav_register_product"
            android:icon="@drawable/baseline_fiber_new_24"
            android:title= "@string/menu_register_product" />
        <item
            android:id="@+id/log_out"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/log_out"/>
    </group>
</menu>