<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/im_hungry_background">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="394dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

        </LinearLayout>

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrar_producto"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewTitulo2"
            app:layout_constraintEnd_toEndOf="@+id/textViewTitulo2"
            app:layout_constraintStart_toStartOf="@+id/textViewTitulo2"
            app:layout_constraintTop_toTopOf="@+id/textViewTitulo2"
            tools:ignore="TextContrastCheck,VisualLintOverlap" />

        <TextView
            android:id="@+id/textViewTitulo2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/registrar_producto"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/linearLayout"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="315dp"
            android:layout_height="530dp"
            android:alpha="0.7"
            android:background="@drawable/im_hungry_solid_black_background"
            app:cardCornerRadius="45sp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/im_hungry_solid_black_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_text_id_producto"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:background="@color/transparent"
                    android:drawablePadding="12dp"
                    android:hint="@string/id_producto"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/edit_text_nombre_producto"
                    android:layout_width="250dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:background="@color/transparent"
                    android:drawablePadding="12dp"
                    android:hint="@string/nombre"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/edit_text_descripcion"
                    android:layout_width="250dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:background="@color/transparent"
                    android:drawablePadding="12dp"
                    android:hint="@string/descripcion"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry,VisualLintTextFieldSize,TouchTargetSizeCheck" />


                <EditText
                    android:id="@+id/edit_text_cantidad"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:background="@color/transparent"
                    android:drawablePadding="12dp"
                    android:hint="@string/apellido_cantidad"
                    android:inputType="number"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry,VisualLintTextFieldSize,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/edit_text_hora_inicial"
                    android:layout_width="250dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:background="@color/transparent"
                    android:drawablePadding="12dp"
                    android:hint="@string/hora_venta_inicial"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry,VisualLintTextFieldSize,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/edit_text_hora_final"
                    android:layout_width="250dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:background="@color/transparent"
                    android:drawablePadding="12dp"
                    android:hint="@string/hora_venta_final"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry,VisualLintTextFieldSize,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/edit_text_precio"
                    android:layout_width="91dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:background="@color/transparent"
                    android:drawablePadding="12dp"
                    android:hint="@string/precio"
                    android:inputType="number"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry,VisualLintTextFieldSize,TouchTargetSizeCheck" />


                <androidx.gridlayout.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="88dp">


                    <CheckBox
                        android:id="@+id/checkEconomia"
                        android:layout_width="wrap_content"
                        android:layout_height="31dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/lugar1"
                        android:textColor="@color/white"
                        app:layout_column="0"
                        app:layout_row="0"
                        tools:ignore="TouchTargetSizeCheck" />

                    <CheckBox
                        android:id="@+id/checkFei"
                        android:layout_width="wrap_content"
                        android:layout_height="31dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="40dp"
                        android:text="@string/lugar2"
                        android:textColor="@color/white"
                        app:layout_column="0"
                        app:layout_row="0"
                        tools:ignore="TouchTargetSizeCheck" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_product_picture"
                        android:layout_width="69dp"
                        android:layout_height="31dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/transparent"
                        android:text="@string/picture"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_column="1"
                        app:layout_row="0"
                        tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />


                </androidx.gridlayout.widget.GridLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_register_product"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="10dp"
                    android:background="@color/transparent"
                    android:text="@string/to_register"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>